--- a/archetype/src/main/resources/archetype-resources/server/src/main/package/etc/parameters.config
+++ b/archetype/src/main/resources/archetype-resources/server/src/main/package/etc/parameters.config
@@ -1,7 +1,136 @@
 #encoding=UTF-8
 
-# Any parameters to pass to your service will go in here
+# https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/Config.md
+#
+# Explains how to add your own attributes to your service.
 
+#
+# https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/ConfigureIPAddressResolution.md
+#
+#-com.deciphernow.server.config.ipAddress.enableIpAddressResolution=
+#-com.deciphernow.server.config.ipAddress.useNetworkInterfaceName=
 
-# Ignore creating StatsReceiver for static routes.
--com.deciphernow.server.config.staticRoutes.ignore=/ping
+#
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/ResourceDecrypter.md
+#
+#-com.deciphernow.server.config.resources.decryptClass=
+
+#
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/Parameters.md
+#
+#-acl.whitelist.file=etc/whitelist.txt
+#-com.deciphernow.server.config.client.numWorkers=16
+#-com.deciphernow.server.config.client.useSeparatePool=true
+#-com.deciphernow.server.config.tls.keyStore=etc/keystore.jks
+#-com.deciphernow.server.config.tls.keyStorePass=password
+#-com.deciphernow.server.config.tls.trustStore=etc/truststore.jks
+#-com.deciphernow.server.config.tls.trustStorePass=password
+#-com.deciphernow.server.config.stats.time=MILLISECONDS
+#-com.deciphernow.server.config.zk.announcementPoint=/example/service/mysfirstservice/0.1
+#-com.deciphernow.server.config.zk.zookeeperConnection=localhost:2181
+#-com.deciphernow.server.config.staticRoutes.ignore=/ping
+
+#
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/AnnounceAndBind.md
+#
+#-com.deciphernow.server.config.admin.port=
+#-com.deciphernow.server.config.rest.httpPort=
+#-com.deciphernow.server.config.rest.httpsPort=
+#-com.deciphernow.server.config.thrift.port=
+
+#
+#Bind through environment variables.
+#
+#
+#The following attributes allow for a defined environment variable to be the assigned as the bind and announce port.
+#
+#Point to the environment variable defining the hostname. The default value is None. This overrides -com.deciphernow.server.config.ipAddress.enableIpAddressResolution only if ENV is defined with a value.
+#
+#-com.deciphernow.server.config.os.env.hostname=
+#
+#Point to the environment variable defining the admin port. The default value is None. This overrides -com.deciphernow.server.config.admin.port only if ENV is defined with a value.
+#
+#-com.deciphernow.server.config.os.env.adminPort=
+#
+#Point to the environment variable defining the http port. The default value is None. This overrides -com.deciphernow.server.config.rest.httpPort only if ENV is defined with a value.
+#
+#-com.deciphernow.server.config.os.env.httpPort=
+#
+#Point to the environment variable defining the https port. The default value is None. This overrides -com.deciphernow.server.config.rest.httpsPort only if ENV is defined with a value.
+#
+#-com.deciphernow.server.config.os.env.httpsPort=
+#
+#Point to the environment variable defining the thrift port. The default value is None. This overrides -com.deciphernow.server.config.thrift.port only if ENV is defined with a value.
+#
+#-com.deciphernow.server.config.os.env.thriftPort=
+#
+#
+#Announce attributes
+#
+#
+#If any of the announcement attributes are defined then they override any BIND attributes with respect to announcement.
+#Announce through configuration
+#
+#The following attributes define the announcement point of the microservice. If set, they will override all BIND attributes with respect to announcement.
+#
+#Point to the environment variable defining the hostname. The default value is None. This overrides -com.deciphernow.server.config.ipAddress.enableIpAddressResolution.
+#
+#-com.deciphernow.announcement.config.service.forward.hostname=
+#
+#Point to the environment variable defining the admin port. The default value is None.
+#
+#-com.deciphernow.announcement.config.service.forward.adminPort=
+#
+#Point to the environment variable defining the http port. The default value is None.
+#
+#-com.deciphernow.announcement.config.service.forward.httpPort=
+#
+#Point to the environment variable defining the https port. The default value is None.
+#
+#-com.deciphernow.announcement.config.service.forward.httpsPort=
+#
+#Point to the environment variable defining the thrift port. The default value is None.
+#
+#-com.deciphernow.announcement.config.service.forward.thriftPort=
+#
+#
+#Announce with environment variables
+#
+#
+#The following attributes point to environment variables that contain the information. If set, they will override all attributes with respect to announcement.
+#
+#Point to the environment variable defining the hostname. The default value is None. This overrides -com.deciphernow.server.config.ipAddress.enableIpAddressResolution only if ENV is defined with a value.
+#
+#-com.deciphernow.announcement.config.os.env.hostname=
+#
+#Point to the environment variable defining the admin port. The default value is None. This overrides -com.deciphernow.announcement.config.service.forward.adminPort only if ENV is defined with a value.
+#
+#-com.deciphernow.announcement.config.os.env.adminPort=
+#
+#Point to the environment variable defining the http port. The default value is None. This overrides -com.deciphernow.announcement.config.service.forward.httpPort only if ENV is defined with a value.
+#
+#-com.deciphernow.announcement.config.os.env.httpPort=
+#
+#Point to the environment variable defining the https port. The default value is None. This overrides -com.deciphernow.announcement.config.service.forward.httpsPort only if ENV is defined with a value.
+#
+#-com.deciphernow.announcement.config.os.env.httpsPort=
+#
+#Point to the environment variable defining the thrift port. The default value is None. This overrides -com.deciphernow.announcement.config.service.forward.thriftPort only if ENV is defined with a value.
+#
+#-com.deciphernow.announcement.config.os.env.thriftPort=
+
+#
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/Cloudwatch-plugin.md
+#
+#
+# Just for testing. Use the default, 300 seconds, for production.
+#
+#-com.deciphernow.fabric.cloudwatch.period=
+#
+# Just for testing. Use the default, us-east-1, for development. Use the appropriate region for C2S.
+#-com.deciphernow.fabric.cloudwatch.region=
+#
+# Several are listed just for testing. Pick 1 (or maybe 2) for production.
+#
+#-com.deciphernow.fabric.cloudwatch.metricNames=process/cpu/percent,process/memory/kb,process/memory/percent,srv/load,srv/request_latency_ms.p90
+#-com.deciphernow.fabric.cloudwatch.serviceName=
