--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -1,43 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<!--
+ Copyright 2017 Decipher Technology Studios LLC
+
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>com.deciphernow</groupId>
-     <artifactId>gm-fabric</artifactId>
-     <version>0.2.3-SNAPSHOT</version>
+    <artifactId>gm-fabric</artifactId>
+    <version>0.2.3-SNAPSHOT</version>
   </parent>
 
   <groupId>com.deciphernow</groupId>
   <artifactId>gm-fabric-archetype</artifactId>
   <packaging>maven-archetype</packaging>
 
+  <name>Microservice framework [ArcheType]</name>
 
   <build>
     <extensions>
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
         <artifactId>archetype-packaging</artifactId>
-        <version>2.2</version>
+        <version>${version.maven-archetype-packaging}</version>
       </extension>
     </extensions>
 
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-archetype-plugin</artifactId>
-          <version>2.2</version>
+          <version>${version.maven-archetype-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.5</version>
+          <version>${version.maven-resources-plugin}</version>
           <configuration>
             <escapeString>\</escapeString>
           </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
+
     <resources>
       <resource>
         <directory>src/main/resources</directory>
